further developed CSS styles & media queries

--- a/index.html
+++ b/index.html
@@ -10,19 +10,20 @@
 </head>
 
 <body>
+    <div class="body-cointainer">
         <div class="wrapper">
             <h1 class="welcomeText anim-typewriter"> Welcome. </h1>
-            <!-- <h1 class="welcomeText2 anim-typewriter"> Welcome. </h1> -->
         </div>
         <div id="textCointainer">
             <p> I'm <span style="color:#C4391D">Anthony Codinach</span>, a dynamic creative breaking into the ever
-                expanding tech space. The intersection between technology & creativity has always intrigued me. </p> <br>
+                expanding tech space. The intersection between technology & creativity has always fascinated me. </p> <br>
 
             <p> This portfolio is a love letter to my admiration for the past & future. Explore my catalog of digital projects
                 I've created during my journey into tech. </p>
         </div>
 
-        <a href="./projects.html"> <img class="" src="./Assets/Images/clickMe.png" alt="Click button"></a>
+        <a href="./projects.html"> <img class="" src="./Assets/Images/launch.png" alt="Click button"></a>
+    </div>
 
     <script></script>
 
