--- a/projects.html
+++ b/projects.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./Assets/Files/style.css">
-    <title>Project</title>
+    <title>Projects</title>
 </head>
 <body>
-    
+  <div id="projects-page-title-wrapper">
+    <h1 class="project-welcome"> Projects. </h1>
+  </div>
+    <div class="projects-cointainer">
+    <div class="project-cointainer">
+        <a href="https://www.youtube.com/shorts/IQqpnu6AhE8"> <img class="project-img" src="./Assets/Images/deployedapplication.jpeg" alt="Website preview for tv show finder"> </a>
+          <h2 class="project-title"> Community Builders </h2>
+          <div class="project-description"> <p class="project-text"> Our platform provides organizations with a seamless solution to post and promote their volunteering opportunities, reaching a vast network of dedicated individuals ready to lend a helping hand. Community Builders enables volunteers to discover and register for events that align with their interests and schedule. </p> </div>
+          </div>
+          <div class="project-cointainer">
+            <a> <img class="project-img" src="./Assets/Images/deployedapplication.jpeg" alt="Website preview for tv show finder"> </a>
+              <h2 class="project-title"> Community Builders </h2>
+              <div class="project-description"> <p class="project-text"> Our platform provides organizations with a seamless solution to post and promote their volunteering opportunities, reaching a vast network of dedicated individuals ready to lend a helping hand. Community Builders enables volunteers to discover and register for events that align with their interests and schedule. </p> </div>
+              </div>
+              <div class="project-cointainer">
+                <a> <img class="project-img" src="./Assets/Images/deployedapplication.jpeg" alt="Website preview for tv show finder"> </a>
+                  <h2 class="project-title"> Community Builders </h2>
+                  <div class="project-description"> <p class="project-text"> Our platform provides organizations with a seamless solution to post and promote their volunteering opportunities, reaching a vast network of dedicated individuals ready to lend a helping hand. Community Builders enables volunteers to discover and register for events that align with their interests and schedule. </p> </div>
+                  </div>          
+          </div>
 </body>
 </html>
