Slight CSS changes

--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
           <div class="project-description"> <p class="project-text"> Our platform provides organizations with a seamless solution to post and promote their volunteering opportunities, reaching a vast network of dedicated individuals ready to lend a helping hand. Community Builders enables volunteers to discover and register for events that align with their interests and schedule. </p> </div>
           </div>
           <div class="project-cointainer">
-            <a> <img class="project-img" src="./Assets/Images/deployedapplication.jpeg" alt="Website preview for tv show finder"> </a>
+            <a href="https://pacific-wildwood-17680-8e953e055e35.herokuapp.com/Links to an external site."> <img class="project-img" src="./Assets/Images/community-builders.png" alt="Website preview for tv show finder"> </a>
               <h2 class="project-title"> Community Builders </h2>
               <div class="project-description"> <p class="project-text"> Our platform provides organizations with a seamless solution to post and promote their volunteering opportunities, reaching a vast network of dedicated individuals ready to lend a helping hand. Community Builders enables volunteers to discover and register for events that align with their interests and schedule. </p> </div>
               </div>
