--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
     <link rel="stylesheet" href="./Assets/Files/style.css">
+    <link rel="manifest" crossorigin="use-credentials" href="manifest.json"/>
 </head>
 
 <body>
